# readyapi-cli

./: CITATION.cff  README.md  SECURITY.md  pyproject.toml  release-notes.md  requirements-tests.txt
.github/: dependabot.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: add-to-project.yml  issue-manager.yml  latest-changes.yml  publish.yml  test-redistribute.yml  test.yml
src/readyapi_cli/: cli.py  discover.py
tests/: conftest.py  test_cli.py  test_requirements.py  test_utils_default_dir.py  test_utils_default_file.py  test_utils_package.py  test_utils_single_file.py
