[project]
name = "readyapi-cli"
version = "0.0.1"
description = ""
authors = [
    {name = "KhulnaSoft DevOps", email = "info@khulnasoft.com"},
]
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
